[package]
name = "brainplonk"
version = "0.1.0"
edition = "2021"
authors = ["0xch4"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-poly = "0.4.2"
ark-std = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
rand_chacha = "0.3.1"
merlin = "3.0.0"
ark-serialize = "0.4.2"